Ajustes do código